--- a/app/views/books/_banner.html.erb
+++ b/app/views/books/_banner.html.erb
@@ -3,12 +3,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="tg-innerbannercontent">
-              <h1><%= t ".all_book" %></h1>
-              <ol class="tg-breadcrumb">
-                <li><a href="javascript:void(0);">home</a></li>
-                <li><a href="javascript:void(0);">Books</a></li>
-                <li class="tg-active">Book Title Here</li>
-              </ol>
+              <h1>Book Review System</h1>
             </div>
           </div>
         </div>
