--- a/app/views/books/_newrelease.html.erb
+++ b/app/views/books/_newrelease.html.erb
@@ -9,7 +9,7 @@
             </h2>
           </div>
           <div class="tg-description">
-            <p><%= t "view.books.newrelease.description" %></p>
+            <span><%= t "view.books.newrelease.description" %></span>
           </div>
           <div class="tg-btns">
             <a class="tg-btn tg-active" href="javascript:void(0);">View All</a>
