--- a/app/views/books/searchlike.html.erb
+++ b/app/views/books/searchlike.html.erb
@@ -36,7 +36,7 @@
             </div>
             <% if @searchlike.any? %>
               <div class="tg-sectionhead">
-                <h2><span>Related Books</span>Search Results</h2>
+                <h2><span>Like Books</span>Search Results</h2>
               </div>
               <%= render @searchlike %>
             <% else %>
