--- a/app/views/suggests/_suggest.html.erb
+++ b/app/views/suggests/_suggest.html.erb
@@ -4,7 +4,13 @@
   <td><%= suggest.categories %></td>
   <td><%= suggest.author %></td>
   <td><%= suggest.created_at %></td>
-  <td><%= suggest.status %></td>
+  <% if suggest.waiting? %>
+    <td><span class="label label-warning"><%= suggest.status %></span></td>
+  <% elsif suggest.accepted? %>
+    <td><span class="label label-success"><%= suggest.status %></span></td>
+  <% else %>
+    <td><span class="label label-danger"><%= suggest.status %></span></td>
+  <% end %>
   <td>
     <% if suggest.waiting? %>
       <%= link_to t(".delete"), suggest_path(suggest), method: :delete,
