--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,15 @@
     <section class="stats">
       <%= render "shared/stats" %>
     </section>
-  </aside>
     <%= render "follow_form" if user_signed_in? %>
+  </aside>
+
+  <div class="col-md-4">
+    <p><b>Tên:</b> <i><%= @user.name %></i></p>
+    <p><b>Địa chỉ email:</b> <i><%= @user.email %></i></p>
+    <% if @user.address %>
+      <p><b>Địa chỉ:</b> <i><%= @user.address %></i></p>
+    <% end %>
+    <p><b>Quyền:</b> <i><%= @user.role %></i></p>
+  </div>
 </div>
