--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -237,6 +237,10 @@ input {
   width: auto;
   margin-left: 0;
 }
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
 /* Users index */
 $silver: #ccc;
 $silver-review: #efeeeeb0;
@@ -268,8 +272,11 @@ input.btn.btn-custom3 {
     border-top: 1px solid $silver;
 }
 .cmt-comment {
-    float: left;
     margin-right: 5px;
+    padding: 10px 0px;
+}
+.info-review {
+    padding: 10px 0px;
 }
 label.form-control-label.text.required {
     display: none;
@@ -279,12 +286,20 @@ label.form-control-label.text.required {
     float: left;
 }
 .like-unlike {
-    width: 20%;
+    width: 9%;
     border: 1px solid #ccc;
     padding: 5px 5px 5px 5px;
     background-color: rgba(0, 100, 0, 0.12);
     border-radius: 3px;
-    margin: 9px 0px;
+    float: left;
+    margin: 23px 5px 0px -98px;
+}
+.button-shared {
+  margin: 32px 0px 0px 0px;
+}
+.average_review-rating {
+    float: left;
+    margin: -1px 5px 0px 0px;
 }
 input.btn.btn-success {
     width: 100%;
@@ -296,9 +311,16 @@ a.btn.btn-danger {
     width: 60%;
     margin-left: 36px;
 }
-.average_review-rating {
-    margin-left: 140px;
-    margin-top: -34px;
+.info_book {
+    width: auto;
+    height: 195px;
+}
+.view {
+    width: 500px;
+}
+a#likes {
+    width: 100%;
+    color: rgb(53, 120, 229);
 }
 .base {
     float: right;
@@ -330,6 +352,7 @@ i.cr-review {
     background: $silver-review;
     padding: 5px 10px 5px 15px;
     border-radius: 6px;
+    width: 99%;
 }
 .abc {
     background-color: #3578e5;
@@ -361,6 +384,9 @@ input#q_title_cont {
     width: 28%;
     float: left;
 }
+.description {
+    padding: 10px 0px;
+}
 .tg-searchbox-search {
     margin: 15px 0px 0px 65px;
     width: 100%;
@@ -371,9 +397,14 @@ input#q_title_cont {
     padding: 0 225px;
     position: absolute;
 }
-li.logo-current img{
-  width: 30px;
-  border-radius: 20px
+li.logo-current img {
+    width: 40px;
+    border-radius: 35px;
+    height: 40px;
+}
+.tg-addnav li + li {
+    border-left: 1px solid #dbdbdb;
+    height: 40px;
 }
 .alert.alert-success {
     margin: 0px;
@@ -385,4 +416,179 @@ ul.users li img {
 ul.users li {
     list-style: none;
     padding: 10px;
+}
+.logo-user img {
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin: 15px 5px 0px;
+    border-radius: 35px;
+}
+.cmt-comment .logo-user img {
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin: 3px 5px 0px;
+    border-radius: 35px;
+}
+section.user_info img {
+    width: 80px;
+    border-radius: 60px;
+    padding: 5px;
+    height: 80px;
+}
+h4.comment {
+    width: 708px;
+}
+.tg-widgetcontent .tg-post-1 {
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+}
+.tg-widget ul li figure a img {
+    display: block;
+    width: 105px;
+    padding: 3px;
+}
+a.fas.fa-trash-alt {
+    color: #d41a1a;
+    margin: -33px 155px;
+    float: left;
+}
+a.far.fa-trash-alt {
+    color: #d41a1a;
+    margin: -73px 370px;
+    float: left;
+}
+.review-comment-cmt {
+    background: #efeeeeb0;
+    padding: 5px 10px 5px 15px;
+    border-radius: 6px;
+    width: 100%;
+}
+label.form-check-label.boolean.optional {
+    width: 15%;
+}
+input#user_remember_me {
+    float: left;
+    width: 1%;
+    margin: 6px;
+}
+input.btn:hover {
+    opacity: 0.8;
+    color: black;
+}
+
+input.btn {
+    background: #4CAF50;
+    color: #fff;
+}
+input.btn.btn {
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    float: right;
+}
+input.btn.btn-primary {
+    width: 37%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    float: left;
+}
+.user_avatars img {
+    width: 45px;
+    height: 45px;
+    border-radius: 60%;
+}
+ul.users.follow li img {
+    width: 45px;
+    height: 45px;
+    border-radius: 60%;
+}
+.activity {
+    margin: 15px;
+    background: #cccccc45;
+    padding: 10px;
+    border-radius: 5px;
+}
+li.admin a {
+    float: right;
+    margin: 1px 5px 0px 5px;
+}
+li.suggest a {
+    float: right;
+    margin: 1px 5px 0px 5px;
+}
+li.user a {
+    float: right;
+    margin: 1px 5px 0px 5px;
+}
+li.setting a {
+    float: right;
+    margin: 9px 0px 0px -16px;
+}
+li.like a {
+    float: right;
+    margin: 8px 0px 0px -16px;
+}
+li.logout a {
+    float: right;
+    margin: 7px 0px 0px -16px;
+}
+li.activities a {
+    float: right;
+    margin: 7px 0px 0px -16px;
+}
+li.profile a {
+    float: right;
+    margin: 9px 0px 0px -16px;
+}
+li.profile {
+    margin: 0px 15px;
+}
+li.login a {
+    float: right;
+    margin: 0px 5px;
+}
+li.signup a {
+    float: right;
+    margin: 0px 5px;
+}
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
+
+ol {
+  max-width: 350px;
+  counter-reset: my-awesome-counter;
+  list-style: none;
+  padding-left: 40px;
+}
+ol li {
+  margin: 0 0 0.5rem 0;
+  counter-increment: my-awesome-counter;
+  position: relative;
+}
+ol li::before {
+  content: counter(my-awesome-counter);
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  position: absolute;
+  --size: 32px;
+  left: calc(-1 * var(--size) - 4px);
+  line-height: var(--size);
+  width: var(--size);
+  height: var(--size);
+  top: 0;
+  transform: rotate(0deg);
+  background: #77b748;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 1px 1px 0 #999;
+}
+.tg-widgetcontent ol {
+    margin: 5px 20px 0px 20px;
 }
