--- a/app/views/admin/books/_book.html.erb
+++ b/app/views/admin/books/_book.html.erb
@@ -7,9 +7,9 @@
       <%= image_tag book.book_img.url(:book_show), class: "original" %>
   </td>
   <td>
-    <%= link_to t(".edit"), edit_admin_book_path(book),
+    <%= link_to t("admin.books.index.edit"), edit_admin_book_path(book),
       class: "fa fa-edit btn btn-primary " %>
-    <%= link_to t(".delete"), admin_book_path(book), method: :delete,
+    <%= link_to t("admin.books.index.delete"), admin_book_path(book), method: :delete,
       data:{confirm: t(".sure")}, class: "fa fa-trash btn btn-danger " %>
   </td>
 </tr>
