--- a/app/views/admin/books/edit.html.erb
+++ b/app/views/admin/books/edit.html.erb
@@ -1,19 +1,17 @@
-<% provide :button_text, t(".edit_book") %>
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 pull-right">
-    <div id="page-inner">
-      <div class="row">
-        <div class="col-md-12">
-          <h2><%= t ".edit_book" %></h2>
-        </div>
+<% provide :button_text, t("admin.books.form.submit_update") %>
+<div>
+  <div id="page-inner">
+    <div class="row">
+      <div class="col-md-12">
+        <h2><%= t ".edit_book" %></h2>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <div class="form-group">
-                <%= render "form" %>
-              </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="form-group">
+              <%= render "form" %>
             </div>
           </div>
         </div>
