--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,24 +1,23 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 pull-right">
-    <h2><%= t (".category") %></h2>
+  <div>
+    <h2><%= t ("admin.static_pages.index.book") %></h2>
     <div class="panel panel-default">
       <div class="panel-body">
         <%= render "form_search" %>
         <div class="table-responsive">
           <div class="row">
             <div class="col-sm-6">
-                <a href="/admin/books/new" class="btn btn-success btn-md"><%= t ".add" %></a>
+                <a href="/admin/books/new" class="btn btn-success btn-md"><%= t "admin.books.index.add" %></a>
             </div>
           </div>
           <table class="table table-striped table-bordered table-hover" id="dataTables-example">
             <thead>
               <tr>
-                <th><%= sort_link @search_book, :id, t(".id") %></th>
-                <th class="name"><%=  sort_link @search_book, :title, t(".name") %></th>
-                <th><%= sort_link @search_book, :category_name, t(".category") %></th>
-                <th><%=  sort_link @search_book, :author, t(".author") %></th>
-                <th><%= t ".image" %></th>
-                <th class="action"><%= t ".action" %></th>
+                <th><%= sort_link @search_book, :id, t("admin.books.index.id") %></th>
+                <th class="name"><%=  sort_link @search_book, :title, t("admin.books.index.name") %></th>
+                <th><%= sort_link @search_book, :category_name, t("admin.books.index.category") %></th>
+                <th><%=  sort_link @search_book, :author, t("admin.books.index.author") %></th>
+                <th><%= t "admin.books.index.image" %></th>
+                <th class="action"><%= t "admin.books.index.action" %></th>
               </tr>
             </thead>
             <tbody>
@@ -26,8 +25,12 @@
             </tbody>
           </table>
           <%= will_paginate @books %>
+          <%= pie_chart Book.joins(:likes).group(:title).count,
+            title: t("statistics_like"),download: "like_book", library: {animation: {easing: 'easeOutQuad'}, elements: {arc: {borderWidth: 1}}} %>
+
+          <%= pie_chart Book.joins(:reviews).group(:title).count,
+            title: t("statistics_review"),download: "review_book", library: {animation: {easing: 'easeOutQuad'}, elements: {arc: {borderWidth: 1}}} %>
         </div>
       </div>
     </div>
   </div>
-</div>
