--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -7,9 +7,9 @@
   </td>
   <td class="center">
     <% unless category.deleted_at %>
-      <%= link_to t("view.admin.category.delete"), admin_category_path(category), method: :delete, data:{confirm: t("sure")}, class: "btn btn-danger " %>
+      <%= link_to t("admin.categories.delete_category"), admin_category_path(category), method: :delete, data:{confirm: t("sure")}, class: "btn btn-danger " %>
     <% else %>
-      <%= link_to t("view.admin.category.restore"), admin_category_path(category), method: :patch, class: "btn btn-success " %>
+      <%= link_to t("admin.categories.restore_category"), admin_category_path(category), method: :patch, class: "btn btn-success " %>
     <% end %>
   </td>
 </tr>
