--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 pull-right">
+  <div>
     <h2><%= t ("admin.static_pages.index.category") %></h2>
     <div class="panel panel-default">
       <div class="panel-body">
@@ -7,15 +6,15 @@
           <div class="row">
             <%= render "search_categories" %>
             <div class="col-sm-6">
-              <a href="/admin/categories/new" class="btn btn-success btn-md"><%= t ".add_category" %></a>
+              <a href="/admin/categories/new" class="btn btn-success btn-md"><%= t "admin.categories.add_category" %></a>
             </div>
           </div>
           <table class="table table-striped table-bordered table-hover" id="dataTables-example">
             <thead>
               <tr>
-                <th><%= t ".id" %></th>
-                <th><%= t ".category" %></th>
-                <th class="action"><%= t ".action" %></th>
+                <th><%= t "admin.categories.id" %></th>
+                <th><%= t "admin.categories.category_name" %></th>
+                <th class="action"><%= t "admin.categories.action" %></th>
               </tr>
             </thead>
             <tbody>
@@ -27,4 +26,3 @@
       </div>
     </div>
   </div>
-</div>
