--- a/app/views/admin/users/_search_user.html.erb
+++ b/app/views/admin/users/_search_user.html.erb
@@ -1,6 +1,6 @@
 <%= search_form_for @search, url: admin_users_path, method: :get do |f| %>
   <div class="field">
-    <%= f.label :name_cont, "Search Users" %>
+    <%= f.label :name_cont, t("admin.users.search_user") %>
     <%= f.text_field :name_cont, class: "form-control",
       placeholder: t("view.admin.user.search_user") %>
     <%= f.text_field :email_cont, class: "form-control",
