--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,12 +1,11 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 pull-right">
-    <h2><%= t "admin.static_pages.index.user" %></h2>
+  <div>
+    <h2><%= t "admin.users.user" %></h2>
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="table-responsive">
         <div class="row"></div>
         <%= render "search_user" %>
-        <div class="add-user"><%= link_to t("view.users.index.adduser"), new_admin_user_path, class: "btn btn-success" %></div>
+        <div class="add-user"><%= link_to t("admin.users.add_user"), new_admin_user_path, class: "btn btn-success" %></div>
         <div class="export">
             <i><%= t("view.users.index.download") %></i>
             <%= link_to t("view.users.index.users_xls"), admin_users_path(format: Settings.export.xls), class: "fa fa-check btn btn-success " %>
@@ -14,8 +13,9 @@
         </div>
         <%= render @users %>
         <%= will_paginate @users %>
+        <%= pie_chart User.group(:name).count,
+          title: t("statistics_user"),download: "review_book", library: {animation: {easing: 'easeOutQuad'}, elements: {arc: {borderWidth: 1}}} %>
         </div>
       </div>
     </div>
   </div>
-</div>
