--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -18,14 +18,16 @@
     </figure>
     <div class="tg-postbookcontent">
       <ul class="tg-bookscategories">
-        <li>
-          <%=link_to book.category.name, books_path(category: book.category.name) %>
-        </li>
+        <li><a href="javascript:void(0);"><%= book.category.name %></a></li>
       </ul>
+      <div class="tg-themetagbox"><span class="tg-themetag">New</span></div>
       <div class="tg-booktitle">
         <h3><a href="/books/<%= book.id %>?category=<%= book.category.id %>">
           <%= book.title %></a></h3>
+        </div>
+        <span class="tg-bookwriter">Author: <a href="javascript:void(0);"><%= book.author %></a></span>
+        <span class="tg-bookprice">
+        </span>
       </div>
-    </div>
   </div>
 </div>
