--- a/app/views/books/_booknew.html.erb
+++ b/app/views/books/_booknew.html.erb
@@ -18,15 +18,16 @@
     </figure>
     <div class="tg-postbookcontent">
       <ul class="tg-bookscategories">
-        <li><a href="javascript:void(0);">Adventure</a></li>
-        <li><a href="javascript:void(0);">Fun</a></li>
+        <li><a href="javascript:void(0);"><%= book.category.name %></a></li>
       </ul>
+      <div class="tg-themetagbox"><span class="tg-themetag">New</span></div>
       <div class="tg-booktitle">
         <h3><a href="/books/<%= book.id %>?category=<%= book.category.id %>">
-          <%= book.title%></a></h3>
+          <%= book.title %></a></h3>
         </div>
-        <span class="tg-bookwriter">By: <a href="javascript:void(0);">Kathrine Culbertson</a></span>
-        <span class="tg-stars"><span></span></span>
+        <span class="tg-bookwriter">Author: <a href="javascript:void(0);"><%= book.author %></a></span>
+        <span class="tg-bookprice">
+        </span>
       </div>
     </div>
   </div>
