--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,14 +3,20 @@
       <div class="cmt">
         <div class="cmt-comment">
           <span class="content">
-            <b><%= comment.user_name %>: </b>
-            <i><%= comment.content %></i>
+          <div class="logo-user">
+            <% if comment.user.image %>
+              <%= image_tag(comment.user.image)%>
+            <% else %>
+              <%= image_tag comment.user.picture.url if comment.user.picture? %>
+            <% end %>
+          </div>
+            <h4 class="comment"><%= comment.user_name %> <i class="cr-review">comment <%= time_ago_in_words(comment.created_at) %> ago</i></h4>
+            <div class="review-comment-cmt"><i><%= comment.content %></i></div>
           </span>
           <div class="timestamp">
-            <i><%= t "view.review.cmt" %> <%= time_ago_in_words(comment.created_at) %> <%= t "view.review.ago" %></i>
             <% if can? :destroy, comment %>
               <div class="links btn-group">
-                <%= link_to t("view.review.delete"), book_review_comment_path(@book, comment.review, comment), method: :delete, remote: true, class: "btn btn-danger" %>
+                <%= link_to t("view.review.delete"), book_review_comment_path(@book, comment.review, comment), method: :delete, remote: true, class: "far fa-trash-alt" %>
               </div>
             <% end %>
           </div>
