--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,9 +21,9 @@
             <ul class="tg-addnav">
               <% if user_signed_in? %>
                 <% if current_user.admin? %>
-                  <li><%= link_to t("layouts.header.admin"), admin_root_path %></li>
+                  <li class="admin"><i class="fas fa-user-lock"></i><%= link_to t("layouts.header.admin"), admin_root_path %></li>
                 <% else %>
-                  <li><%= link_to t("layouts.header.suggest"), suggests_path(user_id: current_user) %></li>
+                  <li class="suggest"><i class="fa fa-sitemap"></i><%= link_to t("layouts.header.suggest"), suggests_path(user_id: current_user) %></li>
                 <% end %>
                   <li class="logo-current">
                     <% if current_user.image %>
@@ -33,25 +33,24 @@
                     <% end %>
                     <%= current_user.name %>
                   </li>
-                  <li><%= link_to t("layouts.header.user"), users_path %></li>
+                  <li class="user"><i class="fas fa-users"></i><%= link_to t("layouts.header.user"), users_path %></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fas fa-user-tag"></i>
                     Account <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to t("layouts.header.profile"), current_user %></li>
-                    <li><%= link_to t("layouts.header.setting"), edit_user_registration_path(current_user) %></li>
-                    <li><%= link_to t("layouts.header.activities"), activities_path %></li>
-                    <li><%= link_to t("layouts.header.searchlike"), books_searchlike_path %></li>
-                    <li class="divider"></li>
-                    <li>
-                      <%= link_to t("layouts.header.logout"), destroy_user_session_path, method: :delete %>
+                    <li class="profile"><i class="fas fa-user-tie"></i><%= link_to t("layouts.header.profile"), current_user %></li>
+                    <li class="setting"><i class="fas fa-user-cog"></i><%= link_to t("layouts.header.setting"), edit_user_registration_path(current_user) %></li>
+                    <li class="activities"><i class="fas fa-align-justify"></i><%= link_to t("layouts.header.activities"), activities_path %></li>
+                    <li class="like"><i class="fas fa-thumbs-up"></i><%= link_to t("layouts.header.searchlike"), books_searchlike_path %></li>
+                    <li class="logout">
+                      <i class="fas fa-sign-out-alt"></i><%= link_to t("layouts.header.logout"), destroy_user_session_path, method: :delete %>
                     </li>
                   </ul>
                 </li>
               <% else %>
-                <li><%= link_to t("layouts.header.login"), new_user_session_path %></li>
-                <li><%= link_to t("layouts.header.signup"), new_user_registration_path %></li>
+                <li class="login"><i class="fas fa-sign-in-alt"></i><%= link_to t("layouts.header.login"), new_user_session_path %></li>
+                <li class="signup"><i class="fas fa-user-plus"></i><%= link_to t("layouts.header.signup"), new_user_registration_path %></li>
               <% end %>
             </ul>
           </div>
@@ -67,7 +66,19 @@
             <a href="index-2.html">
               <%= link_to image_tag("logo.png", alt: "company name here") %>
             </a></strong>
-<!--  -->
+            <div class="tg-searchbox-search">
+            <%= search_form_for @q, url: books_search_path, method: :get do |f| %>
+              <div class="field">
+                <%= f.text_field :title_cont, class: "form-control",
+                  placeholder: t("layouts.header.search_book") %>
+                <%= f.text_field :category_name_cont, class: "form-control",
+                  placeholder: t("layouts.header.search_category") %>
+                <%= f.text_field :author_cont, class: "form-control",
+                  placeholder: t("layouts.header.search_author") %>
+                <%= f.submit t("layouts.header.search"), class: "btn btn-success" %>
+              </div>
+            <% end %>
+            </div>
           </div>
         </div>
       </div>
@@ -98,20 +109,21 @@
                     <a href="javascript:void(0);">
                       <%= t "layouts.header.author" %>
                     </a>
-<!--                     <ul class="sub-menu">
-                      <li><a href="authors.html">Authors</a></li>
-                      <li><a href="authordetail.html">Author Detail</a></li>
-                    </ul> -->
+                    <ul class="sub-menu">
+                      <% load_author.each do |author| %>
+                        <li><a href="#"><%= author.author %></a></li>
+                      <% end %>
+                    </ul>
                   </li>
                   <li class="menu-item-has-children">
                     <a href="javascript:void(0);">
                       <%= t "layouts.header.latest_book" %>
                     </a>
-<!--                     <ul class="sub-menu">
-                      <li><a href="newslist.html">News List</a></li>
-                      <li><a href="newsgrid.html">News Grid</a></li>
-                      <li><a href="newsdetail.html">News Detail</a></li>
-                    </ul> -->
+                    <ul class="sub-menu">
+                      <% load_book_new.each do |book_new| %>
+                      <li><a href="/books/<%= book_new.id %>?category=<%= book_new.category.id %>"><%= book_new.title %></a></li>
+                      <% end %>
+                    </ul>
                   </li>
                   <li><%= link_to t("layouts.header.contact"), "#" %></li>
                 </ul>
