--- a/app/views/suggests/index.html.erb
+++ b/app/views/suggests/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1><%= t ".my_requests" %></h1>
+  <h1><%= t "my_requests" %></h1>
      <%= link_to t(".add_request"), new_suggest_path(user_id: current_user),
     class: "btn btn-success" %>
   <div class="row">
