--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(@unfollow,
   html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit t("view.users.follow.unfollow"), class: "btn" %>
+  <%= f.submit t("view.users.follow.unfollow"), class: "btn btn-primary" %>
 <% end %>
