--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,8 @@
 <li>
-  <%= image_tag user.picture.url if user.picture? %>
+  <% if user.image %>
+    <%= image_tag(user.image)%>
+  <% else %>
+    <%= image_tag user.picture.url if user.picture? %>
+  <% end %>
   <%= link_to user.name, user %>
 </li>
