--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -45,9 +45,9 @@ h6 a { color: #484848;}
 p a,
 p a:hover { text-decoration:underline; }
 p {
-  margin: 0 0 10px;
-  line-height: 15px;
-	letter-spacing: normal;
+  margin: 0 0px -5px;
+  line-height: 20px;
+  letter-spacing: normal;
 }
 a { text-decoration: none; }
 a:hover, a:focus, a:active {
@@ -1850,6 +1850,7 @@ li.menu-item-has-mega-menu { position: static; }
 	font-size: 16px;
 	font-weight: 500;
 	line-height: 19px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .tg-bookwriter {
 	width: 100%;
@@ -3620,7 +3621,7 @@ blockquote .tg-bookwriter{
 }
 .tg-productcontent .tg-booktitle h3{
 	font-size:30px;
-	line-height:25px;
+	line-height:30px;
 }
 .tg-productcontent .tg-bookwriter{
 	font-size:16px;
