--- a/app/views/books/_homeslider.html.erb
+++ b/app/views/books/_homeslider.html.erb
@@ -6,15 +6,15 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-push-1 col-lg-8 col-lg-push-2">
               <div class="tg-slidercontent">
                 <figure class="tg-authorimg"><a href="javascript:void(0);">
-                  <%= link_to image_tag("author/imag-01.jpg", alt: "image description") %>
+                  <%= image_tag @books.find(1).book_img.url(:book_index), class: "bookslide" %>
                 </a></figure>
-                <h1>Jude Morphew</h1>
-                <h2>Latest 2017 Release</h2>
+                <h3><%= @books.find(1).title %></h3>
+                <h2>Author: <%= @books.find(1).author %></h2>
                 <div class="tg-description">
-                  <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore tolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcoiars nisi ut aliquip commodo.</p>
+                  <p><%= raw @books.find(1).description %></p>
                 </div>
                 <div>
-                  <a class="tg-btn" href="javascript:void(0);">read more</a>
+                  <a class="tg-btn" href="/books/1?category=1">read more</a>
                 </div>
               </div>
             </div>
@@ -27,16 +27,16 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-push-1 col-lg-8 col-lg-push-2">
               <div class="tg-slidercontent">
                 <figure class="tg-authorimg"><a href="javascript:void(0);">
-                  <%= link_to image_tag("author/imag-01.jpg", alt: "image description") %>
+                  <%= image_tag @books.find(2).book_img.url(:book_index), class: "bookslide" %>
                 </a></figure>
-                <h1>Jude Morphew</h1>
-                <h2>Latest 2017 Release</h2>
+                <h3><%= @books.find(2).title %></h3>
+                <h2>Author: <%= @books.find(2).author %></h2>
                 <div class="tg-description">
-                  <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore tolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcoiars nisi ut aliquip commodo.</p>
+                  <p><%= raw @books.find(2).description %></p>
                 </div>
                 <div>
 
-                  <a class="tg-btn" href="javascript:void(0);">read more</a>
+                  <a class="tg-btn" href="/books/2?category=2">read more</a>
                 </div>
               </div>
             </div>
@@ -55,7 +55,7 @@
               <div class="tg-status">
                 <div class="tg-statuscontent">
                   <span class="tg-statusicon"><i class="icon-book"></i></span>
-                  <h2>Books we have<span><%= @books.count %></span></h2>
+                  <h2>Total books<span><%= @books.count %></span></h2>
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
               <div class="tg-status">
                 <div class="tg-statuscontent">
                   <span class="tg-statusicon"><i class="icon-heart"></i></span>
-                  <h2>Happy users<span><%= Category.count %></span></h2>
+                  <h2>Total categories<span><%= Category.count %></span></h2>
                 </div>
               </div>
             </div>
